# Idleview

./: .gitignore  README.md  THEME_API.md  package-lock.json  package.json  settings.json  vitest.config.js
idleview-control/: index.html
idleview-control/assets/: index-1YmRRb0Y.js  index-BkDM87BS.css  index-ByO5ZKvQ.js  index-CFqqTU7s.js  index-DbrZ4FKE.css  index-DetV6wXO.js
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/idleview-control/: index.html
src-tauri/idleview-control/assets/: index-0n69pFGG.css  index-3om6emrj.css  index-BfHSSlLE.css  index-CCkbbDEr.js  index-D6hwZENU.js  index-qFbGmEFT.js
src-tauri/src/: http_server.rs  lib.rs  main.rs  settings_manager.rs
